@@ -2,6 +2,7 @@
 
 0.132 "FIXME"
  441859 in 0.131, 'read next unread' didn't always work (Artur Jachacy)
+ 355041 Two-segment group name abbreviations (Benjamin Esham)
  444184 0.131 fails to build on RH4/CentOS4 (Steven Ellis)
  438021 can't post one message to multiple groups at one time (Keith)
  447680 handle nzb files whose parts are in the wrong order (Benjamin Charron)
